# TFKosmos-Community

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  package.json
backend/: Cargo.toml  TEMPLATE_FIX.md
backend/benches/: scan_benchmark.rs
backend/src/: config.rs  main.rs
backend/src/api/: audit_middleware.rs  error.rs  mod.rs  security_headers.rs  validation.rs
backend/src/api/routes/: audit.rs  config.rs  connection.rs  drift.rs  export.rs  generate.rs  mod.rs  resources.rs  scan.rs  templates.rs
backend/src/cli/: commands.rs  mod.rs
backend/src/domain/: aws_dynamodb.rs  aws_ec2.rs  aws_iam.rs  aws_lambda.rs  aws_rds.rs  aws_s3.rs  aws_vpc.rs  azure_app_service.rs  azure_compute.rs  azure_iam.rs  azure_network.rs  azure_sql.rs  azure_storage.rs  iam_policy.rs  mod.rs
backend/src/infra/: mod.rs  provider_trait.rs
backend/src/infra/aws/: client_factory.rs  cloudwatch_client_trait.rs  cloudwatch_scanner.rs  dynamodb_client_trait.rs  dynamodb_scanner.rs  ec2_client_trait.rs  ec2_scanner.rs  elb_client_trait.rs  elb_scanner.rs  iam_client_trait.rs  lambda_client_trait.rs  lambda_scanner.rs  mod.rs  provider.rs  rds_client_trait.rs  rds_scanner.rs  real_cloudwatch_client.rs  real_dynamodb_client.rs  real_ec2_client.rs  real_elb_client.rs  real_iam_client.rs  real_lambda_client.rs  real_rds_client.rs  real_s3_client.rs  real_sns_client.rs  s3_client_trait.rs  s3_scanner.rs  scanner.rs  sns_client_trait.rs  vpc_scanner.rs
backend/src/infra/azure/: azure_client_trait.rs  client_factory.rs  mod.rs  provider.rs  real_azure_client.rs  scanner.rs
backend/src/infra/generators/: mod.rs  naming.rs  terraform.rs
backend/src/infra/query/: evaluator.rs  lexer.rs  mod.rs  parser.rs
backend/src/infra/templates/: manager.rs
backend/src/infra/terraform/: cli.rs  mod.rs  state_parser.rs
backend/src/models/: drift.rs  mod.rs  request.rs  response.rs
backend/src/services/: audit_service.rs  config_management_service.rs  connection_service.rs  dependency_service.rs  drift_service.rs  export_service.rs  file_service.rs  generation_service.rs  mod.rs  preview_service.rs  resource_service.rs  scan_service.rs  template_service.rs  validation_service.rs  zip_service.rs
backend/src/test_helpers/: builders.rs  fixtures.rs  mod.rs
backend/templates_default/terraform/aws/: alb.tf.j2  alb_listener.tf.j2  alb_target_group.tf.j2  cleanup_access_key.tf.j2  cleanup_login_profile.tf.j2  cleanup_mfa.tf.j2  cloudwatch_alarm.tf.j2  dynamodb_table.tf.j2  ec2_instance.tf.j2  eip.tf.j2  iam_group.tf.j2  iam_group_membership.tf.j2  iam_group_policy_attachment.tf.j2  iam_policy.tf.j2  iam_role.tf.j2  iam_role_policy_attachment.tf.j2  iam_user.tf.j2  iam_user_policy_attachment.tf.j2  internet_gateway.tf.j2  lambda_function.tf.j2  lambda_layer.tf.j2  nat_gateway.tf.j2  network_acl.tf.j2  rds_instance.tf.j2  rds_parameter_group.tf.j2  rds_subnet_group.tf.j2  route_table.tf.j2  s3_bucket.tf.j2  s3_bucket_policy.tf.j2  s3_lifecycle.tf.j2  security_group.tf.j2  sns_subscription.tf.j2  sns_topic.tf.j2  subnet.tf.j2  vpc.tf.j2
backend/templates_default/terraform/azure/: app_service.tf.j2  function_app.tf.j2  nsg.tf.j2  (+6 more)
(+31 files in other folders)
