[package]
name = "tfkosmos"
version = "1.0.0"
edition = "2021"

[features]
default = ["community"]

# Edition features (hierarchical: enterprise ⊃ pro ⊃ community)
community = ["full-aws", "full-azure"]
pro = ["community", "multi-account", "modular-gen", "import-engine", "gui-server", "license-manager"]
enterprise = ["pro", "compliance", "rbac", "audit-extended"]

# Pro granular features
multi-account = []
modular-gen = []
import-engine = []
gui-server = []
license-manager = []

# Enterprise granular features
compliance = []
rbac = []
audit-extended = []

# Cloud provider features
full-aws = [
    "dep:aws-sdk-iam",
    "dep:aws-sdk-ec2",
    "dep:aws-sdk-s3",
    "dep:aws-sdk-rds",
    "dep:aws-sdk-lambda",
    "dep:aws-sdk-dynamodb",
    "dep:aws-sdk-elasticloadbalancingv2",
    "dep:aws-sdk-cloudwatch",
    "dep:aws-sdk-sns",
    "dep:aws-config",
    "dep:aws-sdk-sts",
]
full-azure = [
    "dep:azure_identity",
    "dep:azure_core",
]

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros", "multipart"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
tower_governor = "0.4"
governor = "0.6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# AWS SDK (optional, gated by full-aws feature)
aws-sdk-iam = { version = "1", optional = true }
aws-sdk-ec2 = { version = "1", optional = true }
aws-sdk-s3 = { version = "1", optional = true }
aws-sdk-rds = { version = "1", optional = true }
aws-sdk-lambda = { version = "1", optional = true }
aws-sdk-dynamodb = { version = "1", optional = true }
aws-sdk-elasticloadbalancingv2 = { version = "1", optional = true }
aws-sdk-cloudwatch = { version = "1", optional = true }
aws-sdk-sns = { version = "1", optional = true }
aws-config = { version = "1", optional = true }
aws-sdk-sts = { version = "1", optional = true }

# Azure SDK for Rust (optional, gated by full-azure feature)
azure_identity = { version = "0.30", optional = true }
azure_core = { version = "0.30", optional = true }
reqwest = { version = "0.11", features = ["json"] }

# Template engine
minijinja = "1.0"

# Utilities
anyhow = "1.0"
thiserror = "1.0"
uuid = { version = "1.23", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
zip = "0.6"
futures = "0.3"
urlencoding = "2.1"
tokio-stream = "0.1"

# CLI
clap = { version = "4", features = ["derive"] }
toml = "0.8"

# Async trait support
async-trait = "0.1"

# License management
sha2 = "0.10"
dirs = "6"
hostname = "0.4"

# OpenAPI documentation
utoipa = { version = "5", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "8", features = ["axum"] }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"
mockall = "0.13"
axum-test = "16"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "scan_benchmark"
harness = false
